# toolbox

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
core/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
core/locale/de/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
core/migrations/: 0001_initial.py  0002_auto_20210109_1239.py  0003_fileshare.py  0004_ckuploadimage.py  0005_auto_20210118_1051.py  0006_ckuploadimage_owner.py
core/static/core/css/: google-roboto.min.css  styles.css
core/static/core/js/: toolbox_core.js
core/static/ext/ckeditor/: build-config.js  ckeditor.js  config.js
core/static/ext/ckeditor/lang/: de.js  en.js
core/static/ext/ckeditor/samples/old/: index.html
core/static/ext/ckeditor/skins/moonocolor/: editor.css  editor_gecko.css  editor_ie.css  editor_ie7.css  editor_ie8.css  editor_iequirks.css
core/static/ext/painterro/: painterro-1.2.12.min.js  painterro-1.2.12.min.js.map
core/templates/core/: base.html  breadcrumbs.inc.html  card_file.inc.html  card_folder.inc.html  detail_image.html  detail_text.html  download.inc.html  folder.html  index.html  molecules.html  molecules2.html  nav.inc.html  public_folders.html  start.html  success.html  text.html  whiteboard.html
toolbox/: settings.py  urls.py
