[tool.poetry]
name = "Toolbox"
version = "0.1.0"
description = "Tools to help teaching online."
authors = ["Whitie <weimann.th@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.6"
django-q = "^1.3.4"
weasyprint = "^52.2"
qrcode = "^6.1"
django-auth-ldap = {version = "^2.2.0", optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.extras]
ldap = ["django-auth-ldap"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
