[tool.poetry]
name = "Toolbox"
version = "0.1.0"
description = "Tools to help teaching online."
authors = ["Whitie <weimann.th@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4"
django-q = "^1.3.4"
weasyprint = "^52.2"
qrcode = "^6.1"
django-auth-ldap = {version = "^2.2.0", optional = true}
psycopg2-binary = {version = "^2.8.6", optional = true}
Django = "^4.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.extras]
ldap = ["django-auth-ldap"]
pgsql = ["psycopg2-binary"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
